[package]
name = "gaia-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
form_urlencoded = "1"
futures-util = { version = "0.3", default-features = false }
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4"
log4rs = "1.0"
diesel = { version = "2.1.5", features = [
    "r2d2",
    "chrono",
    "serde_json",
    "sqlite",
] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
once_cell = "1.7.2"
r2d2 = "0.8.10"
reqwest = { version = "0.12.4", features = ["json"] }
semver = "1.0"
regex = "1.10.5"
clap = { version = "4.5.16", features = ["derive"] }
redis = "0.26.1"
